test/JDBC/expected/BABEL-2724.out
use master;
go

create table t2724(a int);
insert into t2724 values (1);
go
~~ROW COUNT: 1~~


select a from t2724;
go
~~START~~
int
1
~~END~~


select t2724.a from t2724;
go
~~START~~
int
1
~~END~~


select .t2724.a from t2724;
go
~~START~~
int
1
~~END~~


-- valid error
select .a from t2724;
go
~~ERROR (Code: 33557097)~~

~~ERROR (Message: syntax error at or near ".")~~


-- valid error
select ..a from t2724;
go
~~ERROR (Code: 33557097)~~

~~ERROR (Message: syntax error at or near "..")~~


-- valid error
select dbo..a from t2724;
go
~~ERROR (Code: 33557097)~~

~~ERROR (Message: syntax error at or near "..")~~


-- special case on insert-column. DOT and qualifier is totally ignored
insert into t2724(a) values (2);
insert into t2724(.a) values (3);
insert into t2724(........a) values (4);
insert into t2724(invalid.a) values (5);
insert into t2724(x.y...z....w...a) values (6);
go
~~ROW COUNT: 1~~

~~ROW COUNT: 1~~

~~ROW COUNT: 1~~

~~ROW COUNT: 1~~

~~ROW COUNT: 1~~


select * from t2724;
go
~~START~~
int
1
2
3
4
5
6
~~END~~


drop table t2724;
go
